# grammar-tools

./: .gitignore  README.md  grammar-tools.cabal  stack.yaml
app/: Main.hs
examples/: Expr1.cfg  Expr2.cfg  Mini.cfg  Stmt.cfg  Unproper.cfg
src/CFG/: FirstFollow.hs  Generate.hs  LL1Parser.hs  Parser.hs  Pretty.hs  Proper.hs  Types.hs
src/Data/: Relation.hs
