name:                grammar-tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/grammar-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
copyright:           Copyright (c) 2017- Uwe Schmidt
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CFG.Types
                       CFG.FirstFollow
                       CFG.Parser
                       CFG.Pretty
                       
  other-modules:
  
  build-depends:       base >= 4 && < 5,
                       containers >= 0.5.7.1

  default-language:    Haskell2010

executable cfg
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:
                      base >= 4.7 && < 5
                    , grammar-tools
              
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/grammar-tools
