name:                grammar-tools
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/grammar-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
copyright:           Copyright (c) 2017- Uwe Schmidt
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CFG.FirstFollow
                       CFG.Generate
                       CFG.LL1Parser
                       CFG.Parser
                       CFG.Pretty
                       CFG.Proper
                       CFG.Types
                       Data.Relation
                                                                     
  other-modules:
  
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6

  default-language:    Haskell2010

executable cfg
  main-is:             Main.hs
  hs-source-dirs:      app
  
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , grammar-tools
                     , optparse-applicative
                            
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/grammar-tools
