cabal-version:       3.0
name:                grammar-tools
version:             0.1.0.2
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/grammar-tools#readme
license:             MIT
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
copyright:           Copyright (c) 2017- Uwe Schmidt
category:            Compiler
build-type:          Simple
testetd-with:        GHC == 8.10.7                     
extra-source-files:  README.md

common deps
  build-depends:       base >= 4.7,
                       containers >= 0.6.5,
                       optparse-applicative >= 0.16

  default-language:    Haskell2010
  ghc-options:        -Wall -Wtabs
       

library
  import:              deps
  hs-source-dirs:      src
  exposed-modules:     CFG.FirstFollow
                       CFG.Generate
                       CFG.LL1Parser
                       CFG.Parser
                       CFG.Pretty
                       CFG.Proper
                       CFG.Types
                       Data.Relation
                                                                     
  other-modules:
  
executable cfg
  import:              deps
  main-is:             Main.hs
  hs-source-dirs:      app
  
  build-depends:       grammar-tools
                       
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/grammar-tools
